# qobuz.rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
examples/: download_album.rs  download_favorite_albums.rs  download_favorites.rs  download_playlists.rs  download_track.rs  get_artist.rs  get_favorites.rs
src/: auth.rs  client.rs  core.rs  downloader.rs  lib.rs  main.rs  qobuz_types.rs  quality.rs  runtime_formatter.rs  tagging.rs  test_utils.rs
src/downloader/: builder.rs  delayed_watch.rs  mod.rs  path_format.rs  queue.rs  tagging.rs
src/qobuz_types/: extra.rs  mod.rs
src/types/: extra.rs  formattable.rs  mod.rs  traits.rs
