[package]
name = "qobuz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = { version = "0.5.0", git = "https://github.com/tarneaux/audiotags" }
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
id3 = "1.16.2"
md5 = "0.7.0"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tera = "1.20.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-test = "0.4.4"
url = { version = "2.5.4", features = ["serde"] }
