[package]
name = "qobuz"
version = "0.1.3"
edition = "2021"
authors = ["Tarneo <tarneo@tarneo.fr>"]
description = "Qobuz API lirary"
repository = "https://git.sr.ht/~tarneo/qobuz.rs"
license = "GPL-2.0-only"
keywords = ["music", "qobuz", "api"]
categories = ["multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cli"]

[workspace.dependencies]
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-test = "0.4.4"
url = { version = "2.5.4", features = ["serde"] }

[dependencies]

thiserror = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
url = { workspace = true }

audiotags-qobuz = "0.5.1"
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
id3 = "1.16.2"
md5 = "0.8.0"
paste = "1.0.15"
reqwest = { version = "0.13.2", features = ["json", "stream", "query"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
clap = { version = "4.5.57", features = ["derive"] }
